# Q4_25_Builder_Nishu0

./: .gitignore
diagram/: 1. High Level System Overview.mmd  2. Deposit Collateral & Open Position Flow.mmd  3. Funding Rate Application.mmd  4. Close Position & Withdraw Flow.mmd  5. Liquidation Process.mmd  6. Account Structure & Relationships.mmd  7. End-to-End User Journey.mmd  8 Program Interaction Matrix.mmd
power-perps-frontend/: README.md  (+3 more)
power_perpetuals_contract/programs/perpetuals/: Cargo.toml
power_perpetuals_contract/programs/perpetuals/src/: error.rs  instructions.rs  lib.rs  math.rs  state.rs
power_perpetuals_contract/programs/perpetuals/src/instructions/: add_collateral.rs  add_custody.rs  add_liquidity.rs  add_pool.rs  close_position.rs  get_add_liquidity_amount_and_fee.rs  get_assets_under_management.rs  get_entry_price_and_fee.rs  get_exit_price_and_fee.rs  get_liquidation_price.rs  get_liquidation_state.rs  get_lp_token_price.rs  get_oracle_price.rs  get_pnl.rs  get_remove_liquidity_amount_and_fee.rs  get_swap_amount_and_fees.rs  init.rs  initialize.rs  liquidate.rs  mod.rs  open_position.rs  remove_collateral.rs  remove_custody.rs  remove_liquidity.rs  remove_pool.rs  set_admin_signers.rs  set_custody_config.rs  set_custom_oracle_price.rs  set_custom_oracle_price_permissionless.rs  set_permissions.rs  set_test_time.rs  swap.rs  update_pool_aum.rs  upgrade_custody.rs  withdraw_fees.rs  withdraw_sol_fees.rs
power_perpetuals_contract/programs/perpetuals/src/state/: custody.rs  mod.rs  multisig.rs  oracle.rs  perpetuals.rs  pool.rs  position.rs
(+267 files in other folders)
