[package]
name = "perpetuals"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perpetuals"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = {version = "0.32.1", features = ["init-if-needed"]}
anchor-spl = "0.32.1"
solana-security-txt = "1.1.1"
ahash = { version = "0.8.6", default-features = false, features = ["compile-time-rng"] }
num-traits = "0.2.15"
num = "0.4.0"
bytemuck = "1.13.1"

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
